[package]
name = "verify_example"
version = "0.1.0"
authors = ["Jack O'Connor <oconnor663@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1.5"
sequoia-openpgp = "0.7.0"
serde_json = "1.0.39"
rmpv = "0.4.0"
hex = "0.3.2"
lazy_static = "1.3.0"
base64 = "0.10.1"
sodiumoxide = "0.2.1"
rmp-serde = "0.13.7"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.1"
